--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   geolocator: ^10.1.0
   flutter_map: ^6.1.0
   flutter_secure_storage: ^9.0.0
-  camera: ^0.10.5+8
-  path_provider: ^2.1.1
+  camera: ^0.10.5+9
+  path_provider: ^2.1.2
   path: ^1.8.3
   flutter_localizations:
     sdk: flutter
@@ -39,6 +39,7 @@ dependencies:
   json_serializable: ^6.7.1
   build_runner: ^2.4.8
   json_annotation: ^4.8.1
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
