--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,71 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Flutter/Dart specific
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.build/
+.packages
+.pubspec.lock
+.pub/
+/build/
+
+# VS Code specific
+.vscode/
+
+# Android specific
+/build/
+captures/
+
+# IntelliJ/Android Studio specific
+.idea/
+*.iml
+*.iws
+*.iws
+*.ipr
+*.ids
+*.keystore
+
+# Gradle specific
+.gradle/
+/captures/
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# IntelliJ
+*.iml
+*.iws
+*.id
+*.hprof
+*.jar
+*.log
+.idea/
+
+# macOS specific files
+.DS_Store
+
+# Windows specific files
+Thumbs.db
+Desktop.ini
+
+# Linux specific files
+*~
+*.swp
+*.swo
+
+# Flutter/Dart specific files
+*.code-workspace
+*.dart-tools
+*.flutter-plugins
+*.flutter-plugins-dependencies
+
+# Pubspec environment
+.pub-cache/
+.pub/
