--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   build_runner: ^2.4.8
   json_annotation: ^4.8.1
   http_parser: ^4.0.2
+  mocktail: ^1.0.3
 
 dev_dependencies:
   flutter_test:
